# ecs-voyager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PACKAGING.md  README.md  RELEASING.md  REQUIREMENTS.md  TESTING_RELEASES.md  deployment-status.md  homebrew-setup.md  homebrew-tap-setup.md  install.sh  release-process.md
.claude/agents/: aws-rockstar.md  multi-platform-release-builder.md  rust-tui-aws-expert.md
.github/workflows/: auto-release.yml  ci.yml  gitflow-release.yml.disabled  release.yml
Formula/: ecs-voyager.rb
packaging/chocolatey/: ecs-voyager.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/debian/DEBIAN/: control  postinst
packaging/rpm/: ecs-voyager.spec
scripts/: pre-push.sh
src/: app.rs  aws.rs  charts.rs  config.rs  main.rs  ui.rs
src/ui/: mod.rs  render.rs  theme.rs  utils.rs  widgets.rs
tests/: dimension_test.rs
