[package]
name = "ecs-voyager"
version = "0.2.7"
edition = "2021"

[lints.clippy]
# Specific lints we want to enforce
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Performance and complexity checks
too_many_lines = "allow"
# Allow test unwraps
unwrap_in_result = "allow"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.53"
aws-sdk-cloudwatchlogs = "1.51"
aws-sdk-cloudwatch = "1.51"
aws-sdk-ssm = "1.51"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
regex = "1.10"
